gray/src/main/java/com/example/gray/ui/error/mvi/ErrorSideEffect.kt
package com.example.gray.ui.error.mvi

sealed class ErrorSideEffect {
    data object NavigateToGray : ErrorSideEffect()
}
